--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+
+.lhs {
+  display: flex;
+  gap: 16px;
+}
+
+.rhs {
+  display: flex;
+  gap: 16px;
 }
 
 .profile-image {
@@ -35,6 +50,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  align-self: center;
 }
 
 a {
@@ -45,4 +61,7 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  display: flex;
+  gap: 16px;
 }
