--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,8 +9,8 @@ body, html {
   padding: 16px;
   box-sizing: border-box;
   display: grid;
-  grid-template: 100px 100px 100px 100px 100px 100px 100px 100px
-  / 300px 300px 300px 300px;
+  grid-template: 100px 100px 500px 100px
+  / 300px 900px;
   /* grid-template-columns: 300px 300px 300px 300px;
   grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px ; */
 }
@@ -26,6 +26,7 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-area: 1 / 1 / 2 / 3;
 }
 
 .sidebar {
