Add gap between grid elements, finish task

--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -11,8 +11,7 @@ body, html {
   display: grid;
   grid-template: 100px 100px 500px 100px
   / 300px 900px;
-  /* grid-template-columns: 300px 300px 300px 300px;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px ; */
+  gap: 15px;
 }
 
 .container div {
