--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -35,6 +35,10 @@
   grid-area: 2 / 1 / 4 / 2;
   grid-gap: 50px;
 }
+.sidebar > * {
+  display: grid;
+  align-items: center;
+}
 
 .sidebar .photo {
   background-color: white;
