--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -22,11 +22,26 @@
 .header {
   background-color: #393f4d;
   grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+
+.header > .logo {
+  text-align: left;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+li {
+  list-style-type: none;
 }
 
 .sidebar {
