Style nav element with grid

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -81,6 +81,11 @@ li {
   text-transform: uppercase;
 }
 
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .article {
   background-color: #bccbde;
   grid-area: 3 / 2 / 4 / 3;
